--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Přemysl Kaska MFF UK matematické modelování">
+
     <link rel="stylesheet" href="styles.css">
-    <title>Přemysl Kaska - Personal Website</title>
+    <title>Přemysl Kaska - MFF UK</title>
 </head>
 <body>
     <header class="header">
@@ -17,7 +19,7 @@
 <section id="about" class="section">
     <div class="about-content">
         <div class="text-content">
-            <h2>About</h2>
+            <h2>MFF UK matematické modelování</h2>
             <p>Currently studying bachelors in mathematical modeling at</p>
             <a href="https://www.mff.cuni.cz/">Faculty of Mathematics and Physics Charles University in Prague</a>
         </div>
