--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Přemysl Kaska MFF UK matematické modelování">
+<meta name="description" content="Přemysl Kaska osobní stránka MFF UK matematické modelování">
 
     <link rel="stylesheet" href="styles.css">
     <title>Přemysl Kaska - MFF UK</title>
