--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section id="about" class="section">
     <div class="about-content">
         <div class="text-content">
-            <h2>MFF UK matematické modelování</h2>
+            <h2>MFF UK</h2>
             <p>Currently studying bachelors in mathematical modeling at</p>
             <a href="https://www.mff.cuni.cz/">Faculty of Mathematics and Physics Charles University in Prague</a>
         </div>
